--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,9 @@
-foo
+<!doctype html>
+<html>
+<head>
+  <title>Sam Stanke's Website</title>
+</head>
+<body>
+Hi! I'm Sam and this is my website.
+</body>
+</html>
